--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -1,1 +1,7 @@
-
+<!doctype html>
+<html>
+    <head>
+        <meta http-equiv="refresh" content="0; url=https://apehex.github.io/jekyll-theme-drop/en/privacy-policy">
+        <link rel="canonical" href="https://apehex.github.io/jekyll-theme-drop/en/privacy-policy" />
+    </head>
+</html>
