Add a recaptcha widget to the contact form

--- a/fr/politique-de-confidentialite/index.html
+++ b/fr/politique-de-confidentialite/index.html
@@ -1,7 +1,25 @@
-<section>
+<!DOCTYPE HTML>
+<!--
+    Drop theme by apehex
+    https://github.com/apehex
+    Free for personal and commercial use under the CCA 4.0 license
+-->
+<html lang="fr">
+    
+    <head>
+    <title>Politique de Confidentialité - </title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="https://apehex.github.io/jekyll-theme-drop/assets/css/styles.css" /><link rel="alternate" hreflang="en" href="/en/privacy-policy/" /><link rel="alternate" hreflang="fr" href="/fr/politique-de-confidentialite/" /><noscript><link rel="stylesheet" href="https://apehex.github.io/jekyll-theme-drop/assets/css/noscript.css" /></noscript>
+</head>
+
+
+    <body class="is-preload">
+
+        <section>
     <header class="main">
         <h1>Privacy Policy</h1>
-        <h3>Effective date: 2019-12-02</h3>
+        <h3>Effective date: 2019-12-23</h3>
     </header>
     <p> ("us", "we", or "our") operates the <a href="https://apehex.github.io/jekyll-theme-drop">website</a> (the "Service").</p>
     <p>We take your privacy seriously. To better protect your privacy this page details our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
@@ -66,7 +84,7 @@
     <header class="major">
         <h2>Changes To This Privacy Policy</h2>
     </header>
-    <p>This Privacy Policy is effective as of 2019-12-02 and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.</p>
+    <p>This Privacy Policy is effective as of 2019-12-23 and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.</p>
     <p>We reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. If we make any material changes to this Privacy Policy, we will notify you either through the email address you have provided us, or by placing a prominent notice on our website.</p>
 </section>
 
@@ -76,3 +94,49 @@
     </header>
     <p>For any questions or concerns regarding the privacy policy, please send us an email to <a href="mailto:youremailaddress@gmail.com">youremailaddress@gmail.com</a>.</p>
 </section>
+
+
+        <!-- Footer -->
+<section id="footer">
+    <ul class="icons"><li><a href="https://github.com/apehex" class="icon alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-pinterest" target="_blank"><span class="label">Pinterest</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-500px" target="_blank"><span class="label">500px</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-gitlab" target="_blank"><span class="label">GitLab</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-github" target="_blank"><span class="label">GitHub</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-slack" target="_blank"><span class="label">Slack</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li></ul>
+    <div class="copyright">
+        <ul class="menu">
+            <li>&copy; Drop. All rights reserved.</li>
+            <li>Design: <a href="http://github.com/apehex" target="_blank">apehex</a></li>
+            <li>Inspired by: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li><li><a href="https://apehex.github.io/jekyll-theme-drop/en/privacy-policy/" target="_blank">Privacy Policy</a></li><li><a href="https://apehex.github.io/jekyll-theme-drop/en/legal-terms/" target="_blank">Legal Terms</a></li></ul>
+    </div>
+</section>
+
+        <!-- Scripts -->
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/jquery.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/jquery.scrolly.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/jquery.poptrox.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/browser.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/breakpoints.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/util.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/main.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/cookieconsent.min.js" data-cfasync="false"></script>
+<script>
+window.cookieconsent.initialise({
+	"palette": {
+		"popup": {
+			"background": "#252e39"
+		},
+		"button": {
+			"background": "#14a7d0"
+		}
+	}
+});
+</script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/simple-jekyll-search.min.js" type="text/javascript"></script>
+<script>
+SimpleJekyllSearch({
+  searchInput: document.getElementById('search-input'),
+  resultsContainer: document.getElementById('search-results'),
+  json: "https://apehex.github.io/jekyll-theme-drop/index.json"
+})
+</script>
+
+
+    </body>
+</html>
