--- a/fr/mentions-legales/index.html
+++ b/fr/mentions-legales/index.html
@@ -1,6 +1,70 @@
-<section>
+<!DOCTYPE HTML>
+<!--
+    Drop theme by apehex
+    https://github.com/apehex
+    Free for personal and commercial use under the CCA 4.0 license
+-->
+<html lang="fr">
+    
+    <head>
+    <title>Mentions Légales - </title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="https://apehex.github.io/jekyll-theme-drop/assets/css/styles.css" /><link rel="alternate" hreflang="en" href="/en/legal-terms/" /><link rel="alternate" hreflang="fr" href="/fr/mentions-legales/" /><noscript><link rel="stylesheet" href="https://apehex.github.io/jekyll-theme-drop/assets/css/noscript.css" /></noscript>
+</head>
+
+
+    <body class="is-preload">
+
+        <section>
     <header class="main">
         <h1>Legal Terms</h1>
     </header>
     <p></p>
 </section>
+
+
+        <!-- Footer -->
+<section id="footer">
+    <ul class="icons"><li><a href="https://github.com/apehex" class="icon alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-pinterest" target="_blank"><span class="label">Pinterest</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-500px" target="_blank"><span class="label">500px</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-gitlab" target="_blank"><span class="label">GitLab</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-github" target="_blank"><span class="label">GitHub</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-slack" target="_blank"><span class="label">Slack</span></a></li><li><a href="https://github.com/apehex" class="icon alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li></ul>
+    <div class="copyright">
+        <ul class="menu">
+            <li>&copy; Drop. All rights reserved.</li>
+            <li>Design: <a href="http://github.com/apehex" target="_blank">apehex</a></li>
+            <li>Inspired by: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li><li><a href="https://apehex.github.io/jekyll-theme-drop/en/privacy-policy/" target="_blank">Privacy Policy</a></li><li><a href="https://apehex.github.io/jekyll-theme-drop/en/legal-terms/" target="_blank">Legal Terms</a></li></ul>
+    </div>
+</section>
+
+        <!-- Scripts -->
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/jquery.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/jquery.scrolly.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/jquery.poptrox.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/browser.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/breakpoints.min.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/util.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/main.js"></script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/cookieconsent.min.js" data-cfasync="false"></script>
+<script>
+window.cookieconsent.initialise({
+	"palette": {
+		"popup": {
+			"background": "#252e39"
+		},
+		"button": {
+			"background": "#14a7d0"
+		}
+	}
+});
+</script>
+<script src="https://apehex.github.io/jekyll-theme-drop/assets/js/simple-jekyll-search.min.js" type="text/javascript"></script>
+<script>
+SimpleJekyllSearch({
+  searchInput: document.getElementById('search-input'),
+  resultsContainer: document.getElementById('search-results'),
+  json: "https://apehex.github.io/jekyll-theme-drop/index.json"
+})
+</script>
+
+
+    </body>
+</html>
